--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ h1 {
     flex-direction: column;
     justify-content: center;
     padding: 10% 0%;
-    background-image: url(Media/bgk-header.png);
+    background-image: url(Media/Background/bgk-header.png);
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
