--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ html, body {
     justify-content: center;
     align-items: center;
     margin: 1em 0 0 0;
-    background-color: #f3ec78;
+background-color: #f3ec78;
 
 
 }
@@ -39,8 +39,8 @@ html, body {
  }
 
  .navmenu {
-    background-color: greenyellow;
-    margin: 0 2em;
+ /*   background-color: greenyellow; */
+    margin: 0 6em;
  }
  .navlinks {
      margin: 0 1em;
@@ -51,13 +51,13 @@ html, body {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 0 1em;
-    background-color: blueviolet;
+    margin: 0 0 0 0;
+/*    background-color: blueviolet;  */
  }
 
 
  .logoSize {
-     font-size: 2em;
+     font-size: 2.5em;
      margin: 0 0 0 .25em;
  }
 
