--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ hr.blueDivider {
 .profileContainer {
     display: flex;
     align-items: center;
-    vertical-align: middle;
+    /* vertical-align: middle; */
     flex-direction: row;
     /* justify-content: center; */
     /* position: fixed; */
@@ -85,8 +85,8 @@ hr.blueDivider {
     /* justify-content: center; */
     border: 2px solid;
     border-color: rgba(255, 255, 255, 0.4);
-  /*   margin-left: 0%;
-    margin-right: 0%; */
+ /*    margin-left: auto;
+    margin-right: auto; */
 }
 .profilePic {
     width: 300px;
@@ -137,6 +137,104 @@ hr.whiteDivider {
     width: 4%;
     height: 0px;
     margin-bottom: 4%;
+}
+
+/* Starting here: Section 7 and Section 8 */
+
+.boxSevenEight {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+}
+.boxSeven {
+    display: flex;
+    margin-left: auto;
+    align-items: center;
+    flex-direction: column;
+}
+h2#headingSeven {
+    color: gray;
+    margin-top: 50%;
+}
+
+/* Making the Brand Logo Grid */
+.boxEight {
+    display: grid;
+    margin-right: auto;
+}
+h2#headingEight {
+    color: gray;
+    margin-top: 50%;
+    grid-column: 1 2;
+    grid-row: 1; 
+}
+img.brandLogo {
+    width: 180px;
+    height: 100px;
+    margin: 4%;
+}
+
+#logo1 {
+    grid-column: 1 2;
+    grid-row: 2;
+}
+#logo2 {
+    grid-column: 3 4;
+    grid-row: 2;
+}
+#logo3 {
+    grid-column: 1 2;
+    grid-row: 3;
+}
+#logo4 {
+    grid-column: 3 4;
+    grid-row: 3;
+}
+#logo5 {
+    grid-column: 1 2;
+    grid-row: 4;
+}
+#logo6 {
+    grid-column: 3 4;
+    grid-row: 4;
+}
+#logo7 {
+    grid-column: 1 2;
+    grid-row: 5;
+}
+#logo8 {
+    grid-column: 3 4;
+    grid-row: 5;
+}
+#logo9 {
+    grid-column: 1 2;
+    grid-row: 6;
+}
+#logo10 {
+    grid-column: 3 4;
+    grid-row: 6;
+}
+
+/* Input Form */
+
+#inputName {
+    width: 100%;
+}
+#inputEmail {
+    width: 100%;
+}
+#inputSubject {
+    width: 100%;
+}
+#inputMessage {
+    height: 200px;
+    max-height: 300px;
+    min-height: 100px;
+    min-width: 100%;
+    max-width: 450px;
+}
+#inputSubmit {
+
 }
 .dummy {
 
