Updated CSS file

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ html, body {
     justify-content: center;
     align-items: center;
     margin: 1em 0 0 0;
-background-color: #f3ec78;
+    /* background-color: #f3ec78; */
 
 
 }
