--- a/style.css
+++ b/style.css
@@ -23,77 +23,17 @@ div {
 
 .wrapper {
   width: 100%;
-  border: 1px solid red;
   /* height: 600px; */
 }
-
-.bgk-header>div {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-}
-
-.bgk-header {
-  position: relative;
-  background: url("images/bgk-header.png") no-repeat;
-  width: 100%;
-  height: 670px;
-}
-
-.bgk-middle {
-  background-image: url("images/bgk-middle.png");
-  height: 550px;
-  width: 100%;
-}
-
-.logo {
-  background-image: url("/images/png/logo.png");
-  margin-top: 20px;
-}
-
-#menu {
-  /* line-height: 2.5rem; */
-  width: 100%;
-  margin: 0 auto;
-  font-size: 1rem;
-  height: 5.5rem;
-  vertical-align: middle;
-  position: relative;
-}
-
-#menu::after {
-  content: "";
-  display: block;
-  clear: both;
-}
-
-#menu a {
-  display: block;
-  text-decoration: none;
-  color: #FFFFFF;
-  padding: 0 20px;
-}
-
-#menu>li>a {
-  padding-bottom: 1.875rem;
-  margin-top: 2.6875rem;
-  font-size: 12px !important;
-  font-weight: bold;
-}
-
-.item {
-  float: left;
-}
-
 
 #about {
   margin: 0 auto;
 }
 
 .sub-wrapper {
-  width: 80% !important;
-  padding-left: 10%;
-  padding-right: 10%;
+  width: 60% !important;
+  padding-left: 20%;
+  padding-right: 20%;
 }
 
 .our-story {
@@ -102,21 +42,12 @@ div {
   width: 100%;
   height: 330px;
   padding-top: 50px;
+  padding-bottom: 40px;
   background-color: white;
-  border: 1px solid yellow;
 }
-
-.our-story-image {
-  padding-left: 70px;
-  padding-right: 20px;
-}
-
-
 
 .our-story-text {
-  /* border: 1px solid red; */
   padding-left: 84px;
-  /* width: 60%; */
 }
 
 .text-ourStory-title {
@@ -129,6 +60,9 @@ div {
 .text-ourStory-dsc {
   margin: 21px 0 0;
   width: 100%;
+}
+
+.text-1 {
   opacity: 0.75;
   color: #413d4b;
   font-weight: 300;
@@ -153,10 +87,51 @@ div {
   font-weight: bold;
 }
 
-.about-movie {
-  width: 100%;
-}
-
 #expertise {
   width: 100%;
+  padding-bottom: 40px;
+}
+
+.expertise-title {
+  width: 100%;
+  text-align: center;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.expertise-title>h3 {
+  padding-bottom: 10px;
+}
+
+.expertise-items {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.expertise-items>div {
+  text-align: center;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 35px;
+  padding-bottom: 35px;
+}
+
+.expertise-items>div img {
+  padding-bottom: 30px;
+}
+
+.expertise-item-title {
+  padding-bottom: 15px;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.expertise-items>div:nth-child(-n + 2) {
+  border-right: 1px solid rgb(231, 231, 229);
+}
+
+.expertise-items-horizontal-seprator {
+  width: 100%;
+  border-bottom: 1px solid rgb(231, 231, 229);
 }
