--- a/style.css
+++ b/style.css
@@ -239,6 +239,11 @@ hr.blueDivider {
     color: white;
 }
 
+.expertise-item-title {
+    padding-bottom: 15px;
+    font-size: 14px;
+    font-weight: bold;
+  }
 
 .expertise-title {
   width: 100%;
@@ -246,7 +251,13 @@ hr.blueDivider {
   padding-top: 50px;
   padding-bottom: 50px;
 }
-  
+.expertise-items-horizontal-seprator {
+    width: 100%;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.15);
+  }
+  .expertise-items>div:nth-child(-n + 2) {
+  border-right: 1px solid rgba(0, 0, 0, 0.15);
+}
 .sectionSixContainer {
     display: inline-flex;
     align-items: center;
@@ -310,6 +321,13 @@ p.whiteParagraph {
     color: white;
 }
 
+.expertise-title {
+    width: 100%;
+    text-align: center;
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
+
 .expertise-title>h3 {
   padding-bottom: 10px;
 }
@@ -326,6 +344,10 @@ p.whiteParagraph {
   padding-right: 20px;
   padding-top: 35px;
   padding-bottom: 35px;
+  }
+
+  .expertise-items>div img {
+    padding-bottom: 30px;
   }
 
   #hiringButton {
