--- a/style.css
+++ b/style.css
@@ -248,9 +248,13 @@ hr.blueDivider {
 .expertise-title {
   width: 100%;
   text-align: center;
-  padding-top: 50px;
-  padding-bottom: 50px;
+/*   padding-top: 50px;
+  padding-bottom: 50px; */
 }
+/* .expertise-heading {
+    padding-top: 50px;
+  padding-bottom: 50px;
+} */
 .expertise-items-horizontal-seprator {
     width: 100%;
     border-bottom: 1px solid rgba(0, 0, 0, 0.15);
@@ -457,6 +461,7 @@ img.brandLogo {
     grid-row: 6;
 }
 
+/* End of Logo Grid */
 /* Input Form */
 
 #inputName {
@@ -509,3 +514,5 @@ img.brandLogo {
     background-color: #02dbcc;
     color: white;
 }
+
+/* End of Input Form */
