--- a/style.css
+++ b/style.css
@@ -172,10 +172,10 @@ body {
 
  .navmenu {
  /*   background-color: greenyellow; */
-    margin: 0 6em;
+    margin: 0 auto 0 6em;
  }
  .navlinks {
-     margin: 0 1em;
+     margin: 0 0.1em;
      
  }
 
@@ -183,7 +183,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 0 0 0 0;
+    margin: 0 auto;
 /*    background-color: blueviolet;  */
  }
 
@@ -348,17 +348,28 @@ hr.blueDivider {
     text-align: center;
     align-content: center center;
 }
+
+.sixHeadlines {
+    width: 100%;
+    text-align: center;
+    padding-top: 30px;
+    padding-bottom: 0px;
+}
+
 h3.whiteHeadline {
     color: white;
-    padding-top: 5%;
+    padding-top: 3%;
     padding-bottom: 0%;
+    line-height: normal;
 }
+
 h4.whiteHeadline {
     color: white;
     padding: 0%;
     size: 1em;
     margin-top: 0%;
     font-weight: normal;
+    line-height: normal;
 }
 p.whiteParagraph {
     margin-top: 3%;
@@ -427,6 +438,7 @@ hr.blackDivider {
     width: 6%;
     height: 0px;
     margin-bottom: 4%;
+    margin-top: 2%;
 }
 
 
