--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ body {
 }
 
 .our-story-text {
-  padding-left: 84px;
+  padding-left: 5%;
 }
 
 .text-ourStory-title {
@@ -217,6 +217,15 @@ body {
     -moz-text-fill-color: transparent;
 }
 
+/* Trying to make the navbar a bit more mobile friendly: */
+
+@media only screen and (max-width: 825px) {
+    .navbar a {
+        float: left;
+        text-align: center;
+    }
+
+}
 
 h1 {
     font-weight: bold;
