--- a/style.css
+++ b/style.css
@@ -694,3 +694,241 @@ img.brandLogo {
 }
 
 /* End of Input Form */
+
+/* Start of Section 9 */
+
+.fontlogo {
+    font-family: 'Roboto Light', sans-serif; /* This is fallback font for old browsers */
+    color: white;
+ }
+
+.logolockup {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 0 0 0;
+/*    background-color: blueviolet;  */
+ }
+
+
+ .logoSize {
+     font-size: 2.5em;
+     margin: 0 0 0 .25em;
+ }
+
+ /*   Information about gradients over text:  https://fossheim.io/writing/posts/css-text-gradient/   */
+ .logo-gradient {
+    background-color: #f3ec78;
+    background-image: linear-gradient(90deg, #00e0d0, #4aa3cc);
+    background-size: 100%;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent; 
+    -moz-text-fill-color: transparent;
+}
+
+.section9 {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10% 0%;
+    background-image: url(Media/Background/bgk-footer.png);
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-color: #30235f;
+ 
+    width: 100%;
+    /* color: rgb(0, 238, 32); */
+    overflow: hidden;
+}
+
+.sec9_footer {
+    
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* background-color:chartreuse; */
+}
+
+.sec9_main {
+      display: flex;
+      flex-wrap: wrap;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+      width: 60%;
+      /* background-color: rgb(16, 0, 240); */
+  }
+
+
+  .sec9_row {
+     
+      display: flex;
+      width: 100%;
+      flex-wrap: wrap;
+      flex-direction: row;
+      justify-content: space-around;
+      
+   }
+
+  .box_v03 {
+      
+      width: 20rem;
+      height: auto;
+      flex-shrink: 3;
+    
+      overflow: hidden;
+      padding: .5em 0 1.5em 0;
+        
+/*        border-style: solid;
+      background-color: grey;
+      border: 1px red;  */
+  }
+  .box_v03#ourStudio {
+    margin-left: 1em;
+    margin-right: 0;
+    padding-right: 0;
+  }
+  .box_v03#stayInTouch {
+    /* border: red solid 1px; */
+    padding-left: 0;
+    margin-left: 0;
+  }
+
+.sec9_container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.sec9_text {
+    color: #ffffff;
+
+  }
+
+.sec9_text a {
+    color: #ffffff;
+    padding: .5em;
+    text-decoration: none;
+    font-size: .75em;
+}
+
+.sec9_copyright {
+    color: #ffffff;
+    margin-right: .5em;
+  }
+
+.sec9_text a:hover {
+ color: #00e0d0; 
+  }
+
+
+.sec9_text a:active {
+    color: #00e0d0; 
+}
+
+#align9left {
+    justify-content: flex-start;
+}
+
+.text_align_right {
+    text-align: right;
+}
+#sub_email { /* Everything from the code below is now in here because css below
+    also selected other parts */
+    width: 100%;
+    color: #cccccc;
+    padding: 16px;
+
+    display: inline-block;
+    border: 1px solid rgb(255, 255, 255);
+    background-color: transparent;
+    box-sizing: border-box;
+}
+/* input[type=email], select, textarea {
+    color: #cccccc;
+    padding: 16px;
+
+    display: inline-block;
+    border: 1px solid rgb(255, 255, 255);
+    background-color: transparent;
+    box-sizing: border-box;
+} 
+
+
+textarea:focus, input:focus {
+    color: #cccccc;
+} */
+
+.sec9_spacer {
+    margin-bottom: 2em;
+}
+
+.sec9_social_spacer {
+    margin-top: -.5em;
+}
+
+.sec9_spacer_logo {
+    margin-bottom: .75em;
+}
+
+.sec9_subscribe {
+    height: 3.25em;
+}
+
+.sec9_subscribe:hover {
+    cursor: pointer;
+    -webkit-transform: scale(1.2);
+    -moz-transform: scale(1.2);
+    -o-transform: scale(1.2);
+     transform: scale(1.2);
+}
+
+.sec9_location_icon {
+
+    width: 1em;
+}
+
+.sec9_icon {
+    margin: 1em .15em 0em;
+    width: 2em;
+    -webkit-transition: .25s ease;
+    -moz-transition: .25s ease;
+    -o-transition: .25s ease;
+     transition: .25s ease;
+}
+
+.sec9_icon:hover {
+    cursor: pointer;
+    -webkit-transform: scale(1.2);
+    -moz-transform: scale(1.2);
+    -o-transform: scale(1.2);
+     transform: scale(1.2);
+}
+
+.sec9_icon:active {
+    filter: invert(.5);
+}
+
+
+
+.submit_alignment {
+    flex: wrap;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    margin-right: .5em;
+    flex-wrap: wrap;
+}
+
+.sec9_ourstudio_alignment {
+    flex: wrap;
+    display: flex;
+    justify-content: flex-start;
+    /* margin-right: 1em; */
+
+}
+
+/* End of Section 9 */
